Fix style on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -63,11 +63,23 @@ input {
   background-color: #E0E0E7;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 500px) {
+
+  #app-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    height: 100%;
+  }
+  
+  #app-container > div {
+    height: calc(100% - 125vw);
+  }
+
   #display {
     padding-right: 24px;
     width: 100vw;
-    height: 37.5vw;
+    height: 100%;
   }
   
   #keypad {
